# cpp-mipt

./: .gitignore
First/: 02.02.cpp  02.06.cpp
Second/practice/: 02.09.cpp  02.10.cpp  03.01.cpp  03.02.cpp  03.03.cpp  03.04.cpp  03.05.cpp  03.06.cpp  03.07.cpp  03.09.cpp  03.10.cpp  Makefile
Second/theory/: 03.17.cpp
Third/: 05.05.cpp  07.01.cpp  07.02.cpp  07.03.cpp  07.04.cpp  07.05.cpp  08.01.cpp  08.02.cpp  08.03.cpp  08.04.cpp  08.05.cpp  08.13.hpp
Third/06.05/: 06.05.cpp  CMakeLists.txt
